--- a/src/app/tab2/tab2.page.html
+++ b/src/app/tab2/tab2.page.html
@@ -8,4 +8,8 @@
 
 <ion-content [fullscreen]="true">
 
+  <ion-item>
+    <ion-input label="Item" type="text" [(ngModel)]="item" name="item"></ion-input>
+    <ion-button [disabled]="!item" (click)="addItem()"><ion-icon name="add-outline"></ion-icon></ion-button>
+  </ion-item>
 </ion-content>
