--- a/src/app/tab1/tab1.page.html
+++ b/src/app/tab1/tab1.page.html
@@ -8,4 +8,13 @@
 
 <ion-content [fullscreen]="true">
 
+  <ion-item class="ion-text-center" lines="none" *ngIf="shoppingList.isEmpty">
+    <ion-label>No hay items en tu lista</ion-label>
+  </ion-item>
+
+  <ion-list *ngIf="!shoppingList.isEmpty">
+    <ion-item *ngFor="let item of shoppingList.items">
+      <ion-label>{{item}}</ion-label>
+    </ion-item>
+  </ion-list>
 </ion-content>
