--- a/src/app/tab1/tab1.page.html
+++ b/src/app/tab1/tab1.page.html
@@ -13,8 +13,17 @@
   </ion-item>
 
   <ion-list *ngIf="!shoppingList.isEmpty">
-    <ion-item *ngFor="let item of shoppingList.items">
-      <ion-label>{{item}}</ion-label>
-    </ion-item>
+    <ion-item-sliding *ngFor="let item of shoppingList.items">
+      <ion-item>
+        <ion-label>{{item}}</ion-label>
+      </ion-item>
+      <ion-item-options side="end">
+        <ion-item-option color="danger" (click)="removeItem(item)">
+          <ion-icon slot="icon-only" name="trash-outline"></ion-icon>
+        </ion-item-option>
+      </ion-item-options>
+    </ion-item-sliding>
   </ion-list>
+
+
 </ion-content>
