--- a/src/app/tab1/tab1.page.html
+++ b/src/app/tab1/tab1.page.html
@@ -13,16 +13,22 @@
   </ion-item>
 
   <ion-list *ngIf="!shoppingList.isEmpty">
-    <ion-item-sliding *ngFor="let item of shoppingList.items">
-      <ion-item>
-        <ion-label>{{item}}</ion-label>
-      </ion-item>
-      <ion-item-options side="end">
-        <ion-item-option color="danger" (click)="removeItem(item)">
-          <ion-icon slot="icon-only" name="trash-outline"></ion-icon>
-        </ion-item-option>
-      </ion-item-options>
-    </ion-item-sliding>
+    <ion-reorder-group [disabled]="false" (ionItemReorder)="onRenderItem($event)">
+      <ion-item-sliding *ngFor="let item of shoppingList.items">
+        <ion-item>
+          <ion-label>{{item}}</ion-label>
+          <ion-reorder></ion-reorder>
+        </ion-item>
+
+        <ion-item-options side="end">
+          <ion-item-option color="danger" (click)="removeItem(item)">
+            <ion-icon slot="icon-only" name="trash-outline"></ion-icon>
+          </ion-item-option>
+        </ion-item-options>
+
+      </ion-item-sliding>
+
+    </ion-reorder-group>
   </ion-list>
 
 
