--- a/src/app/tab1/tab1.page.html
+++ b/src/app/tab1/tab1.page.html
@@ -1,8 +1,28 @@
-<ion-header [translucent]="true">
+<ion-menu side="end" content-id="content">
+  <ion-header>
+    <ion-toolbar>
+      <ion-title>Menu</ion-title>
+    </ion-toolbar>
+  </ion-header>
+  <ion-content>
+    <ion-list>
+      <ion-item [disabled]="shoppingList.isEmpty">
+        <ion-icon slot="start" name="trash-outline"></ion-icon>
+        <ion-label>Eliminar todos los items</ion-label>
+      </ion-item>
+    </ion-list>
+  </ion-content>
+</ion-menu>
+
+
+<ion-header [translucent]="true" id="content">
   <ion-toolbar>
     <ion-title>
       Mi lista de la compra
     </ion-title>
+    <ion-buttons slot="end">
+      <ion-menu-button auto-hide="false"></ion-menu-button>
+    </ion-buttons>
   </ion-toolbar>
 </ion-header>
 
