Eliminamos todos los items

--- a/src/app/tab1/tab1.page.html
+++ b/src/app/tab1/tab1.page.html
@@ -6,7 +6,7 @@
   </ion-header>
   <ion-content>
     <ion-list>
-      <ion-item [disabled]="shoppingList.isEmpty">
+      <ion-item (click)="removeAll()" [disabled]="shoppingList.isEmpty">
         <ion-icon slot="start" name="trash-outline"></ion-icon>
         <ion-label>Eliminar todos los items</ion-label>
       </ion-item>
